syntax = "proto3";

package base;

option go_package = "chat/proto/base;base";

// 用户基础信息
message UserInfo{
    uint32 id = 1;
    string username = 2;
    string nickname = 3;
    string email = 4;
    string sign = 5;
    string avatar = 6;
    string area = 7;
    enum Gender {
        MALE = 0;
        FEMALE = 1;
        SECRET = 2;
    }
    Gender gender = 8;
}

// 消息格式
message SendMsg {
    enum Type {
        SEND = 0;
        BROADCAST = 1;
        CLOSE = 2;
        History = 3;
    }
    Type type = 1;
    string server = 2;
    string event = 3;
    repeated uint32 userIds = 4;
    bytes msg = 5;
}

message Proto {
    int32 msgId = 1;
    bytes data = 2;
}